macro(add_example_cv EXAMPLE_NAME)
    if (OpenCV_FOUND)
        add_executable(${EXAMPLE_NAME} "${EXAMPLE_NAME}.cc")
        target_link_libraries(${EXAMPLE_NAME} ${CMAKE_PROJECT_NAME} ${OpenCV_LIBRARIES})
    else()
        message("OpenCV not included. Abort building ${EXAMPLE_NAME}")
    endif(OpenCV_FOUND)
endmacro(add_example_cv EXAMPLE_NAME)

macro(add_example EXAMPLE_NAME)
    add_executable(${EXAMPLE_NAME} "${EXAMPLE_NAME}.cc")
    target_link_libraries(${EXAMPLE_NAME} ${CMAKE_PROJECT_NAME})    
endmacro(add_example EXAMPLE_NAME)

add_example(devicediscovery_example)
add_example(deviceparamconfigure_example)
add_example(imagestream_example)
add_example_cv(imagestream_cv_example)
add_example(asyncimagestream_example)
add_example_cv(gainexposurecontrol_example)
add_example(sparkconfigure)
